<resources>

  <!--App basix -->
  <string name="google_app_id">324762766314</string>
  <string name="app_name">RentMate</string>
  <string name="action_settings">Settings</string>
  <string name="action_search_menu">Search</string>
  <string name="splash_screen_text_view">RentMate</string>

  <!--Log In -->
  <string name="welcome_textview_rentmate">Welcome to RentMate</string>
  <string name="hint_password">Password</string>
  <string name="log_in_button">LogIn</string>
  <string name="user_email_edit_text">Email</string>
  <string name="sign_up_button">Sign up</string>
  <string name="switch_tenant">Tenant</string>
  <string name="switch_landlord">Landlord</string>
  <string name="login_tab_sign_up">Sign up</string>
  <string name="login_tab_login">Log in</string>

  <!--Navigation-->
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_my_apartments">My Apartments</string>
  <string name="nav_claims">Claims</string>
  <string name="nav_profile">Profile</string>
  <string name="nav_settings">Settings</string>
  <string name="nav_home">Home</string>
  <string name="nav_navigation">Navigation</string>
  <string name="nav_log_out">Log out</string>

  <!--Claims-->
  <string name="is_rented_button_name">Vacant</string>
  <string name="state_of_claim_button_name">State</string>
  <string name="create_claim_button">Create Claim</string>
  <string name="add_first_claim">Add your firs claim</string>
  <string name="claim_detail_title">Claim detail Title</string>
  <string name="claim_detail_date">Claim detail date</string>
  <string name="claim_detail_description">Description</string>
  <string name="claim_tab_detail">DETAILS</string>
  <string name="claim_tab_message">MESSAGE</string>
  <string name="claim_action_bar">Claims</string>
  <string name="new_claim_select_apt">Select Apartment</string>
  <string name="new_claim_title">Title</string>
  <string name="new_claim_description">Describtion of your issue here</string>
  <string name="create_message">CREATE</string>
  <string name="delete_message">DELETE</string>
  <string name="new_message">NEW MESSAGE</string>
  <string name="new_message_created_toast">Message was created</string>
  <string name="new_message_failure_toast">Message was not created</string>


  <!--Apartments-->
  <string name="add_first_apartment">Add your firs apartment</string>
  <string name="apartment_occupied">Occupied</string>
  <string name="apartment_vacant">Vacant</string>
  <string name="new_apt_address">Address</string>
  <string name="new_apartment_occupied">Occupied</string>
  <string name="new_apt_save_button">Save</string>
  <string name="check_location_button">Check Location</string>
  <string name="join_apartment_button">Join Apartment</string>
  <string name="apartment_tab_my_apt">MY APARTMENTS</string>
  <string name="apartment_tab_location">LOCATION</string>
  <string name="new_apartment_country_edit_text">Please enter your Country</string>
  <string name="new_apartment_country_text_view">Country</string>
  <string name="new_apartment_city_edit_text">Please enter your City</string>
  <string name="new_apartment_city_text_view">City</string>
  <string name="new_apartment_street_edit_text">Please enter your Street name</string>
  <string name="new_apartment_street_text_view">Street</string>
  <string name="new_apartment_zip_edit_text">Please enter your Zip code</string>
  <string name="new_apartment_zip_text_view">Zip code</string>
  <string name="new_apartment_dialog_title">Check Address</string>
  <string name="join_apartment_text_view">Please enter apartment code</string>

  <!--Notice view-->
  <string name="claims_need_your_attention">Claims need your attention</string>
  <string name="xy_people_are_waiting_for_your_answer">XY people are waiting for your answer</string>
  <string name="apartments_are_free">Apartments are free</string>
  <string name="invite_tenants_to_your_apartments">Invite tenants to your apartments</string>

  <!--Email-->
  <string name="welcome_new_tenant">Welcome new Tenant!</string>
  <string name="use_the_ID">Please find attached apartment ID and log in to your new Apartment</string>
  <string name="new_ID">Your new ID: </string>

  <!--Fonts-->
  <string name="font_roboto_thin">fonts/Roboto-Thin.ttf </string>
  <string name="font_roboto_regular">fonts/Roboto-Thin.ttf </string>

  <!--Validations-->
  <string name="validation_wrong_email">Invalid Email </string>
  <string name="validation_wrong_pass">Insert At least 4 characters </string>

</resources>
