<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item android:title="@string/nav_navigation">
      <menu>
        <item
          android:id="@+id/nav_home"
          android:icon="@drawable/ic_dashboard"
          android:title="@string/nav_home"/>
        <item
          android:id="@+id/nav_my_appartments"
          android:icon="@drawable/ic_home"
          android:title="@string/nav_my_apartments"/>
        <item
          android:id="@+id/nav_claims"
          android:icon="@drawable/ic_assignment"
          android:title="@string/nav_claims"/>
      </menu>
    </item>
    <item android:title="@string/nav_settings">
      <menu>
        <item
          android:id="@+id/nav_profile"
          android:icon="@drawable/ic_settings"
          android:title="@string/nav_profile"/>
        <item
          android:id="@+id/nav_log_out"
          android:icon="@drawable/ic_lock"
          android:title="@string/nav_log_out"/>
      </menu>
    </item>
  </group>
</menu>
